--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,5 +1,5 @@
 <header>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
             <a class="navbar-brand mono-font" href="#!/">EMSystems</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
