margin elements to be under the nav bar

--- a/app/votings/votings.html
+++ b/app/votings/votings.html
@@ -1,6 +1,6 @@
 <header main-nav-bar-directive>
 </header>
-<main class="container">
+<main class="container margin-top-navbar">
     <div class="row mt-4">
         <div class="col-md-6 border-right">
             <div class="row">
