--- a/app/login/login.html
+++ b/app/login/login.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <div class="container">
+        <div class="container margin-top-navbar">
             <div class="form-group row mt-4">
                 <label for="loginEmail" class="col-md-2 col-form-label">Email Address:</label>
                 <div class="col-md-6">
