--- a/app/tenants/tenants.html
+++ b/app/tenants/tenants.html
@@ -1,6 +1,6 @@
 <header main-nav-bar-directive>
 </header>
-<main class="container">
+<main class="container margin-top-navbar">
     <div class="row mt-4">
         <div class="col-md-6">
             <div class="form-group">
