--- a/app/tenants_dashboard/tenantsDashboard.html
+++ b/app/tenants_dashboard/tenantsDashboard.html
@@ -1,6 +1,6 @@
 <header main-nav-bar-directive>
 </header>
-<main class="container" ng-controller="votingsCtrl">
+<main class="container margin-top-navbar" ng-controller="votingsCtrl">
     <div class="row mt-4">
         <div class="col-md-6 border-right">
             <div class="row">
